--- a/Test06.html
+++ b/Test06.html
@@ -107,15 +107,20 @@
   </style>
 </head>
 <body>
-  <div id="touchControls" aria-hidden="true">
-  <button class="btn up" data-key="ArrowUp"></button>
-  <button class="btn left" data-key="ArrowLeft"></button>
-  <button class="btn right" data-key="ArrowRight"></button>
-  <button class="btn down" data-key="ArrowDown"></button>
-  <button class="btn enter" data-action="enter">⏎</button>
-</div>
+  <div id="gameWrap">
+    <div id="screen" tabindex="0"></div>
+    <div id="hud"></div>
+  </div>
 
-<script>
+  <div id="touchControls" aria-hidden="true">
+    <button class="btn up" data-key="ArrowUp"></button>
+    <button class="btn left" data-key="ArrowLeft"></button>
+    <button class="btn right" data-key="ArrowRight"></button>
+    <button class="btn down" data-key="ArrowDown"></button>
+    <button class="btn enter" data-action="enter">⏎</button>
+  </div>
+
+  <script>
 (() => {
   const VIEW_W = 32;
   const VIEW_H = 32;
