--- a/Test06.html
+++ b/Test06.html
@@ -988,6 +988,7 @@
   let mode = "title";
 
   let { x: px, y: py } = findSpawnOverworld(overworld);
+  let facing = "down";
 
   const towns = new Map();
   let townObj = null;
