--- a/Test06.html
+++ b/Test06.html
@@ -141,7 +141,11 @@
   body { margin: 10px; }
   #mainRow { gap: 10px; }
   #sidePanel { width: 36vw; max-width: 220px; }
-  #screen { max-height: 52vh; }
+  #screen{
+  max-height: none;
+  height: calc(100vh - 220px);
+  overflow: hidden;
+}
   #hud { max-width: 100%; }
 
   #controlsBar{
