--- a/Test06.html
+++ b/Test06.html
@@ -138,9 +138,22 @@
 
 /* Mobile mode */
 @media (max-width: 820px){
-  body { margin: 10px; }
-  #mainRow { gap: 10px; }
-  #sidePanel { width: 36vw; max-width: 220px; }
+  body{
+  margin: 16px;
+  overflow-x: hidden;
+}
+  #mainRow{
+  gap: 10px;
+  width: 100%;
+  max-width: 100%;
+  overflow: hidden;
+}
+  #sidePanel{
+  width: 34vw;
+  max-width: 200px;
+  flex: 0 0 auto;
+}
+
 
   #screen{
     max-height: none;
@@ -149,8 +162,9 @@
   }
 
   #bottomRow{
-    width: 100%;
-  }
+  width: 100vw;
+  max-width: 100vw;
+}
 
   #hud{
     width: 100%;
