--- a/MV/map_viewer.html
+++ b/MV/map_viewer.html
@@ -1,4 +1,5 @@
 <!doctype html>
+
 <html lang="en">
 <head>
   <meta charset="utf-8" />
@@ -14,21 +15,25 @@
       <button id="btnFit" aria-label="Fit to screen">Fit</button>
     </div>
 
-    <div id="center">
-      <div id="label">Loading…</div>
-    </div>
+```
+<div id="center">
+  <div id="label">Loading…</div>
+</div>
 
-    <div id="right">
-      <label class="fileBtn">
-        Open…
-        <input id="fileInput" type="file" accept=".txt,.map,text/plain" />
-      </label>
-    </div>
+<div id="right">
+  <label class="fileBtn">
+    Open…
+    <input id="fileInput" type="file" accept=".txt,.map,text/plain" />
+  </label>
+</div>
+```
+
   </div>
 
-  <canvas id="c"></canvas>
-  
-    <!-- Bottom editor toolbar -->
+<canvas id="c"></canvas>
+
+  <!-- Bottom editor toolbar -->
+
   <div id="editBar">
     <div id="editLeft">
       <button id="btnMode" title="Toggle paint/pan">Paint</button>
@@ -36,24 +41,34 @@
       <button id="btnCopy" title="Copy map to clipboard">Copy</button>
     </div>
 
-    <div id="brushRow" aria-label="Brush palette"></div>
+```
+<div id="brushSection">
+  <div id="brushSizeLabel">Size:</div>
+  <div id="brushSizeRow" aria-label="Brush size"></div>
+</div>
 
-    <div id="editRight">
-      <span id="brushLabel">Brush: .</span>
-    </div>
+<div id="brushRow" aria-label="Brush palette"></div>
+
+<div id="editRight">
+  <span id="brushLabel">Brush: .</span>
+</div>
+```
+
   </div>
 
   <!-- Clipboard fallback (iOS can block clipboard) -->
+
   <div id="copyModal">
-  <div id="copyModalInner">
-    <div class="copyTitle">Copy map text</div>
-    <textarea id="copyText"></textarea>
-    <div class="copyBtns">
-      <button id="copyClose">Close</button>
+    <div id="copyModalInner">
+      <div class="copyTitle">Copy map text</div>
+      <textarea id="copyText"></textarea>
+      <div class="copyBtns">
+        <button id="copyClose">Close</button>
+      </div>
     </div>
   </div>
-</div>
 
   <script type="module" src="./map_viewer.js"></script>
+
 </body>
 </html>
